Fixing card issue due to overflow-x being disabled in app

--- a/src/components/About/Cards/Card.css
+++ b/src/components/About/Cards/Card.css
@@ -6,6 +6,7 @@
     color: white;
     margin: 10px;
     margin-left: 0;
+    overflow-x: visible;
 }
 
 /* This container is needed to position the front and back side */
@@ -16,13 +17,15 @@
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
-    
+    overflow-x: visible;
 }
 
 /* Do an horizontal flip when you move the mouse over the ƒlip box container */
 .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
+    overflow-x: visible;
 }
+
 
 /* Position the front and back side */
 .flip-card-front,
